ref: pull scripts from original keycloak repo

--- a/keycloak/Dockerfile.centos
+++ b/keycloak/Dockerfile.centos
@@ -1,6 +1,6 @@
-FROM ubuntu:bionic
+FROM centos:7
 
-ENV KEYCLOAK_VERSION 7.0.1
+ENV KEYCLOAK_VERSION 7.0.0
 ENV JDBC_POSTGRES_VERSION 42.2.5
 ENV JDBC_MYSQL_VERSION 5.1.46
 ENV JDBC_MARIADB_VERSION 2.2.3
@@ -17,28 +17,20 @@ ARG KEYCLOAK_DIST=https://downloads.jboss.org/keycloak/$KEYCLOAK_VERSION/keycloa
 
 USER root
 
-RUN apt-get -qq update \
-	&& apt-get install -y --no-install-recommends \
-		bsdtar \
-    curl \
-		unzip \
-		openjdk-8-jdk-headless \
-		jq \
-		openssl \
-		ca-certificates \
-    ca-certificates-java \
-	&& rm -rf /var/lib/apt/lists/* \
-  && update-ca-certificates
-
-#ENV JAVA_HOME /usr/lib/jvm/default-java
-
+RUN yum update -y \
+	&& yum install -y xmlstarlet saxon augeas bsdtar unzip \
+	&& yum install -y java-1.8.0-openjdk-devel \
+	&& yum install -y epel-release git \
+	&& yum install -y jq openssl which \
+	&& yum clean all
 RUN groupadd -r jboss -g 1000 \
 	&& useradd -u 1000 -r -g jboss -m -d /opt/jboss -s /sbin/nologin -c "JBoss user" jboss \
-	&& chmod 755 /opt/jboss \
-  && export JAVA_HOME=""/usr/lib/openjdk-8-jdk-$(dpkg --print-architecture)""
+	&& chmod 755 /opt/jboss
 WORKDIR /opt/jboss
 
-COPY ./tools /opt/jboss/tools
+ENV JAVA_HOME /usr/lib/jvm/java
+
+ADD tools /opt/jboss/tools
 RUN /opt/jboss/tools/build-keycloak.sh
 
 USER jboss
@@ -46,6 +38,7 @@ USER jboss
 EXPOSE 8080
 EXPOSE 8443
 
-ENTRYPOINT ["/opt/jboss/tools/docker-entrypoint.sh"]
+ENTRYPOINT [ "/opt/jboss/tools/docker-entrypoint.sh" ]
+
 CMD ["-b", "0.0.0.0"]
 
