fix: include ca-certificates.crt

--- a/keycloak-gatekeeper/Dockerfile
+++ b/keycloak-gatekeeper/Dockerfile
@@ -1,6 +1,34 @@
-FROM golang:1.13-buster as build
+#
+# build image
+#
+
+FROM golang:1.13-alpine as build
 
 ARG GIT_REF=master
+
+
+RUN apk update \
+	&& apk add --no-cache \
+		ca-certificates \
+		curl \
+		gcc \
+		git \
+		make \
+		musl-dev \
+		openssl \
+	&& update-ca-certificates
+
+ENV USER=keycloak
+ENV UID=10001
+
+RUN adduser \
+	--disabled-password \
+	--gecos "" \
+	--home "/" \
+	--shell "/sbin/nologin" \
+	--no-create-home \
+	--uid "${UID}" \
+	"${USER}"
 
 WORKDIR /usr/src
 
@@ -10,8 +38,20 @@ RUN curl -L https://github.com/keycloak/keycloak-gatekeeper/archive/$GIT_REF.tar
 		&& make static \
 		&& make test
 
+#
+# container image
+#
+
 FROM scratch
 
+ENV PROXY_LISTEN=:3000
+
+COPY --from=build /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
+COPY --from=build /etc/passwd /etc/passwd
+COPY --from=build /etc/group  /etc/group
 COPY --from=build /usr/src/keycloak-gatekeeper/bin/keycloak-gatekeeper ./keycloak-gatekeeper
+
+USER keycloak:keycloak
+EXPOSE 3000
 
 ENTRYPOINT ["/keycloak-gatekeeper"]
